radio button alignment fixed

--- a/src/containers/VideoBGAndForm/VideoBGAndForm.css
+++ b/src/containers/VideoBGAndForm/VideoBGAndForm.css
@@ -83,6 +83,9 @@
     font-size: 14px;
 }
 
+.header-queryBox_radiobutton {
+    float: left;
+}
 
 .header-queryBox_radiobutton label {
 
